Chat Memory V3: per-step incremental JSONL storage
Migrate from V2 "one line per run" to V3 "one line per step" with
incremental writes. Each step flushes immediately to disk instead of
batching the entire run. This improves durability and enables future
streaming replay.

- Add QueryLine/StepLine types with _type discriminator field
- Rewrite ChatWindowMemoryStore with appendQueryLine/appendStepLine
- Refactor TurnTrace to step-aware accumulation with StepAccumulator
- Add stageMarker emission in OneshotMode and ReactMode
- Merge plan-draft and plan-generate into single "plan" step
- Rewrite ChatRecordStore to parse V3 query/step lines
- Update all tests to V3 format

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>